<resources>
    <string name="app_name">Train Inventory</string>

    <string name="trains">Trains</string>
    <string name="brands">Brands</string>
    <string name="categories">Categories</string>
    <string name="all_brands">All Brands</string>
    <string name="add_train">Add Train</string>
    <string name="all_categories">All Categories</string>
    <string name="trains_of_the_brand">Trains of the brand %1$s</string>
    <string name="all_from_this_Category">All %1$ss</string>

    <!-- Details and Add Train screen -->
    <string name="category">Category:</string>
    <string name="brand">Brand:</string>
    <string name="reference">Reference:</string>
    <string name="name">Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="add_image">Add image:</string>
    <string name="description">Description:</string>
    <string name="location">Location:</string>
    <string name="all_trains">All Trains</string>
    <string name="brand_name">Brand name:</string>
    <string name="add_logo">Add logo:</string>
    <string name="website">Website:</string>
    <string name="scale">Scale:</string>
    <string name="category_name">Add category</string>
    <string name="add_image_from">Add image from:</string>
    <string name="select_category">--Select category--</string>
    <string name="select_brand">--Select brand--</string>

    <!-- Actions -->
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="undo">UNDO</string>
    <string name="search">Search</string>
    <string name="edit_train">Edit Train</string>
    <string name="ok">OK</string>
    <string name="select_picture">Select Picture</string>

    <!-- Empty screen messages -->
    <string name="no_items_found">No items found. Click on the plus button above to add a new item</string>
    <string name="no_trains_found">No trains found. Click on the plus button above to add a new train.</string>
    <string name="no_brands_found">No brands found. Click on the plus button above to add a new brand.</string>
    <string name="no_categories_found">No categories found. Click on the plus button above to add a new category.</string>
    <string name="no_train_for_this_brand">No trains found for this brand</string>
    <string name="no_train_for_this_category">No items found for this category</string>
    <string name="plus_icon_unicode">&#xf055;</string>

    <!-- Feedback -->
    <string name="brand_Saved">Brand is saved</string>
    <string name="brand_deleted">Brand deleted</string>
    <string name="category_deleted">Category deleted</string>

    <!-- Warnings -->
    <string name="quantity_should_be_positive">Quantity should be a positive integer</string>
    <string name="cannot_erase_category">This category is used by some trains. You cannot erase this category</string>
    <string name="cannot_erase_brand">This brand is used by some trains. You cannot erase this brand</string>
    <string name="scale_cant_be_empty">Scale cannot be empty</string>
    <string name="brand_name_empty">Brand name cannot be empty</string>
    <string name="category_name_empty">Category name cannot be empty</string>
    <string name="train_name_empty">Train name cannot be empty</string>
    <string name="category_cannot_be_empty">Category name cannot be empty</string>
    <string name="brand_cannot_be_empty">Brand name cannot be empty</string>
    <string name="do_you_want_to_delete">Do you want to delete this item?</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_warning">There are unsaved changes. Are you sure that you want to discard your changes?</string>
    <string name="discard_changes">Discard changes</string>
    <string name="keep_editing">Keep editing</string>
    <string name="permission_denied">Permission denied</string>
    <string name="are_you_sure_you_want_to_delete_this_category">Are you sure you want to delete this category?</string>
    <string name="no_website_warning">You haven\'t provided a web site for this brand. Click edit icon to add one.</string>

    <!-- Content descriptions -->
    <string name="cd_product_image">image of the train</string>
    <string name="cd_edit_icon">Edit icon</string>
    <string name="cd_train_icon_for_brands">Train icon which shows the trains from this brand</string>
    <string name="cd_web_icon_fror_brands">Web icon for opening the website of the brand</string>
    <string name="cd_brand_logo">Logo of the brand</string>
    <string name="cd_empty_icon">Train icon is shown when the list is empty</string>
    <string name="cd_chosen_train_image">An image of the chosen train</string>
    <string name="cd_details_gallery_icon">Train image if available, click for changing the image</string>
    <string name="cd_add_category_button">Button for adding a category</string>
    <string name="cd_add_brand_button">Button for adding a brand</string>
    <string name="cd_brand_logo_edit">Brand logo. You can click for changing it.</string>
    <string name="cd_brand_item_logo">Brand logo</string>
    <string name="cd_category_item_train_btn">Train icon. Click here to see trains from this category.</string>

    <!-- Hints for edittexts -->
    <string name="hint_train_name">Train name</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_reference">Model Reference</string>
    <string name="hint_train_description">Train description</string>
    <string name="hint_location">Location of the train</string>
    <string name="hint_train_scale">Scale of the train</string>
    <string name="export_to_excel">Export to Excel</string>

    <string name="successfully_exported">Successfully exported to excel</string>
    <string name="exporting_to_excel">Exporting to Excel. Please wait..</string>
    <string name="uopload_file_to">Upload file to:</string>
    <string name="open_file_with">Open file with:</string>
    <string name="category_already_exists">This category already exists.</string>
    <string name="brand_already_exists">This brand is already added</string>
    <string name="train_name_already_Exists">This train name is already used</string>
    <string name="browse">Browse</string>
    <string name="send">SEND</string>
    <string name="upload_file">Would you like to upload the excel file to cloud or share with someone?</string>
    <string name="successfully_exported_browse">Successfully exported to Excel. Would you like to browse the file?</string>
    <string name="website_of_the_brand">Website of the brand</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="filter_by_brand">Filter by brand</string>
    <string name="hint_search_keywords">Search by keyword(s)</string>
    <string name="search_trains">Search Trains</string>
    <string name="no_results_for_search">No trains found with these criteria.</string>
    <string name="trash">Trash</string>
    <string name="no_trains_in_trash">No trains in the trash</string>
    <string name="cd_restore_train">Restore train</string>
    <string name="category_used_by_trains_in_trash">This category is used by some trains in your TRASH folder. Deleting this category will cause those trains to be permanently deleted. Do you want to delete it anyway?</string>
    <string name="do_you_want_to_permanently_delete_train">Do you want to permanently delete this train?</string>
    <string name="please_add_items">You don\'t have any trains in your inventory yet.</string>
    <string name="task_cancelled">Task Cancelled</string>

</resources>
