<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/trainListFragment"
        android:title="@string/trains"
        android:icon="@drawable/ic_train_bottom_nav" />

    <item
        android:id="@+id/filterTrainFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_search"/>

    <item
        android:id="@+id/categoryListFragment"
        android:title="@string/categories"
        android:icon="@drawable/ic_category"/>

    <item
        android:id="@+id/brandListFragment"
        android:title="@string/brands"
        android:icon="@drawable/ic_brand" />
</menu>