<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="chosenTrain"
            type="com.canli.oya.traininventory.data.entities.TrainEntry" />

        <variable
            name="isEdit"
            type="boolean" />

        <import type="com.canli.oya.traininventory.utils.DataBindingUtils" />
    </data>

    <ScrollView
        android:id="@+id/add_train_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView10"
                style="@style/FieldStyle"
                android:text="@string/category"
                app:layout_constraintBottom_toBottomOf="@id/categorySpinner"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/categorySpinner"
                style="@style/editTextStyle"
                android:layout_margin="@dimen/margin_standard"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toStartOf="@+id/addTrain_addCategoryBtn"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@id/childFragContainer" />

            <TextView
                android:id="@+id/textView5"
                style="@style/FieldStyle"
                android:layout_marginTop="8dp"
                android:text="@string/brand"
                app:layout_constraintBottom_toBottomOf="@+id/brandSpinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/brandSpinner" />

            <Spinner
                android:id="@+id/brandSpinner"
                style="@style/editTextStyle"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toStartOf="@+id/addTrain_addBrandBtn"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

            <TextView
                android:id="@+id/textView2"
                style="@style/FieldStyle"
                android:text="@string/reference"
                app:layout_constraintBaseline_toBaselineOf="@+id/editReference"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editReference"
                style="@style/editTextStyle"
                android:hint="@string/hint_reference"
                android:inputType="textCapCharacters"
                android:text="@{isEdit ? chosenTrain.modelReference : null}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.466"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/brandSpinner" />

            <TextView
                android:id="@+id/textView3"
                style="@style/FieldStyle"
                android:text="@string/name"
                app:layout_constraintBaseline_toBaselineOf="@+id/editTrainName"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTrainName"
                style="@style/editTextStyle"
                android:hint="@string/hint_train_name"
                android:inputType="textCapWords"
                android:text="@{isEdit ? chosenTrain.trainName : null}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/editReference" />

            <TextView
                android:id="@+id/textView4"
                style="@style/FieldStyle"
                android:text="@string/quantity"
                app:layout_constraintBaseline_toBaselineOf="@+id/editQuantity"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editQuantity"
                style="@style/editTextStyle"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                android:text="@{isEdit ? String.valueOf(chosenTrain.quantity) : null}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/editScale" />

            <android.support.constraint.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="textView2,textView3,textView4,textView5"
                tools:layout_editor_absoluteX="91dp" />


            <ImageView
                android:id="@+id/product_details_gallery_image"
                android:layout_width="@dimen/edit_train_image_height"
                android:layout_height="@dimen/edit_train_image_height"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/cd_details_gallery_icon"
                android:src="@{isEdit ? chosenTrain.imageUri : null}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTrainDescription" />

            <TextView
                android:id="@+id/textView"
                style="@style/FieldStyle"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTrainDescription" />

            <TextView
                android:id="@+id/textView7"
                style="@style/FieldStyle"
                android:layout_marginTop="@dimen/margin_standard"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editQuantity" />

            <EditText
                android:id="@+id/editTrainDescription"
                style="@style/editTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_train_description"
                android:inputType="textMultiLine"
                android:text="@{isEdit ? chosenTrain.description : null}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView6"
                style="@style/FieldStyle"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/location"
                app:layout_constraintBottom_toBottomOf="@+id/editLocationNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editLocationNumber" />

            <EditText
                android:id="@+id/editLocationLetter"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_marginLeft="@dimen/half_margin"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/location_background"
                android:hint="@string/hint_location_number"
                android:inputType="textCapCharacters"
                android:text="@{DataBindingUtils.splitLocation(chosenTrain.location)[1]}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_details_gallery_image" />

            <EditText
                android:id="@+id/editLocationNumber"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="@dimen/half_margin"
                android:layout_marginRight="@dimen/half_margin"
                android:background="@drawable/location_background"
                android:ems="10"
                android:hint="@string/hint_location_letter"
                android:inputType="number"
                android:text="@{DataBindingUtils.splitLocation(chosenTrain.location)[0]}"
                app:layout_constraintBottom_toBottomOf="@+id/editLocationLetter"
                app:layout_constraintEnd_toStartOf="@+id/textView11"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toTopOf="@+id/editLocationLetter" />

            <ImageButton
                android:id="@+id/addTrain_addCategoryBtn"
                android:layout_width="@dimen/add_brand_imagebtn_height"
                android:layout_height="@dimen/add_brand_imagebtn_height"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_add_button"
                android:contentDescription="@string/cd_add_category_button"
                android:src="@drawable/ic_baseline_add"
                app:layout_constraintBottom_toBottomOf="@+id/categorySpinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/categorySpinner" />

            <ImageButton
                android:id="@+id/addTrain_addBrandBtn"
                android:layout_width="@dimen/add_brand_imagebtn_height"
                android:layout_height="@dimen/add_brand_imagebtn_height"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_add_button"
                android:contentDescription="@string/cd_add_brand_button"
                android:src="@drawable/ic_baseline_add"
                app:layout_constraintBottom_toBottomOf="@+id/brandSpinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/brandSpinner" />

            <FrameLayout
                android:id="@+id/childFragContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </FrameLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_marginLeft="@dimen/half_margin"
                android:text="-"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="@+id/editLocationLetter"
                app:layout_constraintEnd_toStartOf="@+id/editLocationLetter"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/editLocationNumber"
                app:layout_constraintTop_toTopOf="@+id/editLocationLetter" />

            <EditText
                android:id="@+id/editScale"
                style="@style/editTextStyle"
                android:ems="10"
                android:hint="@string/hint_train_scale"
                android:inputType="textPersonName"
                android:text="@{isEdit ? chosenTrain.scale : null}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/editTrainName" />

            <TextView
                android:id="@+id/textView13"
                style="@style/FieldStyle"
                android:text="@string/scale"
                app:layout_constraintBaseline_toBaselineOf="@+id/editScale"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>