<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="brand"
            type="com.canli.oya.traininventoryroom.data.BrandEntry"/>

        <variable
            name="brandItemClick"
            type="com.canli.oya.traininventoryroom.adapters.BrandAdapter.BrandItemClickListener" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_margin"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_marginTop="@dimen/half_margin"
        android:background="@drawable/train_item_background"
        android:padding="@dimen/half_padding">

        <TextView
            android:id="@+id/brand_item_brandName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/half_margin"
            android:gravity="center_vertical"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/brand_item_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Brand Name"
            android:text = "@{brand.brandName}"/>

        <ImageView
            android:id="@+id/brand_item_logo"
            android:layout_width="@dimen/list_brand_logo_dim"
            android:layout_height="@dimen/list_brand_logo_dim"
            android:layout_marginBottom="@dimen/half_margin"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginTop="@dimen/half_margin"
            android:contentDescription="@string/cd_brand_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:imageUrl="@{brand.brandLogoUri}" />

        <ImageView
            android:id="@+id/brand_item_web_icon"
            android:layout_width="@dimen/brand_item_logo_dim"
            android:layout_height="@dimen/brand_item_logo_dim"
            android:layout_marginBottom="@dimen/half_margin"
            android:layout_marginLeft="@dimen/half_margin"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:padding="@dimen/small_padding"
            android:contentDescription="@string/cd_web_icon_fror_brands"
            app:srcCompat="@drawable/link_symbol"
            android:onClick="@{(theView) ->  brandItemClick.onBrandItemClicked(theView, brand)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/brand_item_train_icon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brand_item_brandName" />

        <ImageView
            android:id="@+id/brand_item_train_icon"
            android:layout_width="@dimen/brand_item_logo_dim"
            android:layout_height="@dimen/brand_item_logo_dim"
            app:layout_constraintEnd_toStartOf="@+id/brand_item_edit_icon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/brand_item_web_icon"
            app:layout_constraintTop_toTopOf="@+id/brand_item_web_icon"
            android:contentDescription="@string/cd_train_icon_for_brands"
            app:srcCompat="@drawable/ic_train_list_item"
            android:onClick="@{(theView) ->  brandItemClick.onBrandItemClicked(theView, brand)}"
            />

        <ImageView
            android:id="@+id/brand_item_edit_icon"
            android:layout_width="@dimen/brand_item_logo_dim"
            android:layout_height="@dimen/brand_item_logo_dim"
            app:layout_constraintEnd_toStartOf="@+id/brand_item_logo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/brand_item_train_icon"
            app:layout_constraintTop_toTopOf="@+id/brand_item_train_icon"
            android:contentDescription="@string/cd_edit_icon"
            app:srcCompat="@drawable/ic_edit_colored"
            android:onClick="@{(theView) ->  brandItemClick.onBrandItemClicked(theView, brand)}" />
    </android.support.constraint.ConstraintLayout>
</layout>